fix search bar getting covered at widths around 800px - 900px ; collapse nav at higher widths

--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,52 @@ table {
   color: #979797;
 }
 
+/*
+ * Change the navbar collapse point. Collapse at higher widths then the default.
+ *
+ * see this link for details about this css:
+ *   https://stackoverflow.com/questions/18192082/bootstrap-3-navbar-collapse
+ */
+@media (max-width: 920px) {
+  .navbar-header {
+    float: none;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-collapse.collapse {
+    display: none !important;
+  }
+  .navbar-nav {
+    float: none !important;
+    margin: 7.5px -15px;
+  }
+  .navbar-nav > li {
+    float: none;
+  }
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .navbar-text {
+    float: none;
+    margin: 15px 0;
+  }
+  /* since 3.1.0 */
+  .navbar-collapse.collapse.in {
+    display: block !important;
+  }
+  .collapsing {
+    overflow: hidden !important;
+  }
+}
+
+/*************************************************************/
+
 @media (min-width: 768px) {
   #Search-Container {
     padding-top: 10px;
@@ -256,7 +302,7 @@ table {
     box-shadow: none;
     height: 30px;
     font-weight: 600;
-    width: 370px;
+    width: 420px;
     display: inline-block;
     line-height: 30px;
     margin-top: 15px;
